search module added

--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -8,6 +8,17 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+
+    <!--"Index","Movies",FormMethod.Get //is a overlead function to show Get seach in the url -->
+    @using (Html.BeginForm("Index","Movies",FormMethod.Get))
+    {
+    <p>
+        Genre: @Html.DropDownList("movieGenre", "All")
+        Title: @Html.TextBox("SearchString") <br/>
+        <input type="submit" value="Filter" />
+    </p>
+    }
+    
 </p>
 <table class="table">
     <tr>
